--- a/views/public/index.html
+++ b/views/public/index.html
@@ -26,7 +26,7 @@
                         <li class="list-inline-item opacity-75 mr-2">
                             <a class="text-light font-size-sm pl-0 pr-2" href=""><img
                                     src="https://img.icons8.com/ios/24/FFFFFF/mail.png" />&nbsp;
-                                OnlineStore@aparrecchio.com &nbsp; | &nbsp; </a>
+                                Sublisivarte@gmail.com &nbsp; | &nbsp; </a>
                         </li>
                     </ul>
                     <div class="d-flex justify-content-around">
@@ -90,7 +90,7 @@
                             </div>
                         </form>
                     </div>
-                    
+
                     <div class="form-box registrate">
                         <h2>Registarte</h2>
                         <form action="#">
@@ -142,24 +142,24 @@
                         <i id="rigth" class="fa-solid fa-angle-right"></i>
                     </div>
                 </div>
-                <div class="container mt-3 py-3">
+                <div class="container mt-3 py-3 productos">
                     <p class="fs-3 pb-3 text-light fw-bold">Ofertas</p>
                     <div class="row d-flex justify-content-between" id="Nuevos-productos">
                         <div class="col-2">
                             <div class="card border border-0 bg-dark text-light text-center" style="width: 13rem;">
-                                <img src="../../resources/images/not found.jpg" class="card-img-top rounded" alt="...">
+                                <img src="../../resources/images/camisas.jpg" class="card-img-top rounded" alt="...">
                                 <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text"></p>   
+                                    <h5 class="card-title">Camisas</h5>
+                                    <p class="card-text"></p>
                                     <a href="../public/producto.html" class="btn btn-primary rounded">Ver mas...</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/not found.jpg" class="card-img-top rounded" alt="...">
+                                <img src="../../resources/images/tazas.jpg" class="card-img-top rounded" alt="...">
                                 <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Vaso</h5>
                                     <p class="card-text"></p>
                                     <a href="#" class="btn btn-primary rounded">Ver mas...</a>
                                 </div>
@@ -167,19 +167,19 @@
                         </div>
                         <div class="col-2">
                             <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/not found.jpg" class="card-img-top rounded" alt="...">
+                                <img src="../../resources/images/ropa.jpg" class="card-img-top rounded" alt="...">
                                 <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">bolsa</h5>
                                     <p class="card-text"></p>
                                     <a href="#" class="btn btn-primary rounded">Ver mas...</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 d-md-none d-lg-block">
                             <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/not found.jpg" class="card-img-top rounded" alt="...">
+                                <img src="../../resources/images/accesorios.jpg" class="card-img-top rounded" alt="...">
                                 <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Collar para perro</h5>
                                     <p class="card-text"></p>
                                     <a href="#" class="btn btn-primary rounded">Ver mas...</a>
                                 </div>
@@ -187,9 +187,9 @@
                         </div>
                         <div class="col-2 d-md-none">
                             <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/not found.jpg" class="card-img-top rounded" alt="...">
+                                <img src="../../resources/images/frame.jpg" class="card-img-top rounded" alt="...">
                                 <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">frame</h5>
                                     <p class="card-text"></p>
                                     <a href="#" class="btn btn-primary rounded">Ver mas...</a>
                                 </div>
@@ -199,7 +199,7 @@
                 </div>
             </main>
         </div>
-    </div>  
+    </div>
     <div class="row">
         <!-- footer -->
         <footer class="bg-primary d-flex justify-content-around flex-column"></footer>
@@ -211,6 +211,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../controllers/public/nav-login.js"></script>
     <script src="../../controllers/public/index.js"></script>
 </body>
