--- a/views/public/producto.html
+++ b/views/public/producto.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../../resources/css/public.css">
 </head>
 
@@ -24,7 +25,7 @@
                         <li class="list-inline-item opacity-75 mr-2">
                             <a class="text-light font-size-sm pl-0 pr-2" href=""><img
                                     src="https://img.icons8.com/ios/24/FFFFFF/mail.png" />&nbsp;
-                                OnlineStore@aparrecchio.com &nbsp; | &nbsp; </a>
+                                Sublisivarte@gmail.com &nbsp; | &nbsp; </a>
                         </li>
                     </ul>
                     <div class="d-flex justify-content-around">
@@ -66,10 +67,10 @@
                             <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="../../resources/images/camisas.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -90,7 +91,7 @@
                 </div>
                 <div class="row">
                     <div class="d-grid gap-2 col-8 mx-auto align-self-start">
-                        <button class="btn btn-primary" type="button">Añadir al carrito</button>
+                        <button class="btn btn-primary" type="button" onclick="Pedido()">Añadir al carrito</button>
                     </div>
                     <p class="fs-4 text-light mt-3">Tallas:</p>
                     <table class="table table-bordered text-center table-dark table-hover mx-3">
@@ -118,7 +119,8 @@
             <div class="row">
                 <div class="col-7 border-bottom">
                     <p class="fs-6 text-light">Nombre usuario</p>
-                    <p class="fs-6 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda vitae veritatis
+                    <p class="fs-6 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda vitae
+                        veritatis
                         vero,
                         excepturi, ab debitis accusantium autem laborum minima quo ducimus reiciendis distinctio sunt
                         libero
@@ -129,7 +131,8 @@
             <div class="row mt-3">
                 <div class="col-7 border-bottom">
                     <p class="fs-6 text-light">Nombre usuario</p>
-                    <p class="fs-6 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda vitae veritatis
+                    <p class="fs-6 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda vitae
+                        veritatis
                         vero,
                         excepturi, ab debitis accusantium autem laborum minima quo ducimus reiciendis distinctio sunt
                         libero
@@ -148,7 +151,9 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../controllers/public/nav-login.js"></script>
+    <script src="../../controllers/public/alerts.js"></script>
 </body>
 
 </html>
