--- a/views/public/cuenta.html
+++ b/views/public/cuenta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../../resources/css/public.css">
 </head>
 
@@ -24,7 +25,7 @@
                         <li class="list-inline-item opacity-75 mr-2">
                             <a class="text-light font-size-sm pl-0 pr-2" href=""><img
                                     src="https://img.icons8.com/ios/24/FFFFFF/mail.png" />&nbsp;
-                                OnlineStore@aparrecchio.com &nbsp; | &nbsp; </a>
+                                Sublisivarte@gmail.com &nbsp; | &nbsp; </a>
                         </li>
                     </ul>
                     <div class="d-flex justify-content-around">
@@ -115,14 +116,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row py-3">
-                <div class="col-2">
-                    <button class="btn btn-primary" type="submit">Aceptar</button>
-                </div>
-            </div>
+
         </form>
+        <div class="row my-3">
+            <div class="col-2">
+                <button class="btn btn-primary" onclick="createAccount()" type="submit">Aceptar</button>
+            </div>
+        </div>
     </div>
-    <div class="row bg-primary pt-3 fixed-bottom">
+    <div class="row bg-primary pt-3">
         <footer></footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -133,6 +135,7 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
     <script src="../../controllers/public/nav-login.js"></script>
+    <script src="../../controllers/public/alerts.js"></script>
 </body>
 
 </html>
