--- a/views/public/productos.html
+++ b/views/public/productos.html
@@ -24,7 +24,7 @@
                         <li class="list-inline-item opacity-75 mr-2">
                             <a class="text-light font-size-sm pl-0 pr-2" href=""><img
                                     src="https://img.icons8.com/ios/24/FFFFFF/mail.png" />&nbsp;
-                                OnlineStore@aparrecchio.com &nbsp; | &nbsp; </a>
+                                Sublisivarte@gmail.com &nbsp; | &nbsp; </a>
                         </li>
                     </ul>
                     <div class="d-flex justify-content-around">
@@ -99,34 +99,22 @@
                         <div class="col-9 mt-5">
                             <div class="row mb-3">
                                 <div class="row d-flex justify-content-around" id="Nuevos-productos">
-                                    <div class="col-2 -align-self-start">
-                                        <div class="card border border-0 bg-dark text-light text-center">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                    <div class="col-2">
+                                        <div class="card border border-0 bg-dark text-light text-center"
+                                            style="width: 13rem;">
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
                                                 <p class="card-text"></p>
-                                                <a href="../public/producto.html" class="btn btn-primary rounded">Ver
-                                                    mas...</a>
+                                                <a href="../public/producto.html" class="btn btn-primary rounded">Ver mas...</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-2">
                                         <div class="card border border-0 bg-dark text-light text-center"
                                             style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
-                                                alt="...">
-                                            <div class="card-body d-grid gap-2">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text"></p>
-                                                <a href="#" class="btn btn-primary rounded">Ver mas...</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="card border border-0 bg-dark text-light text-center"
-                                            style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
@@ -138,7 +126,7 @@
                                     <div class="col-2">
                                         <div class="card border border-0 bg-dark text-light text-center"
                                             style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
@@ -150,7 +138,7 @@
                                     <div class="col-2 d-md-none">
                                         <div class="card border border-0 bg-dark text-light text-center"
                                             style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
@@ -163,10 +151,10 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="row d-flex justify-content-around" id="Nuevos-productos">
-                                    <div class="col-2 -align-self-start ">
+                                    <div class="col-2">
                                         <div class="card border border-0 bg-dark text-light text-center"
                                             style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
@@ -178,7 +166,7 @@
                                     <div class="col-2">
                                         <div class="card border border-0 bg-dark text-light text-center"
                                             style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
@@ -190,19 +178,7 @@
                                     <div class="col-2">
                                         <div class="card border border-0 bg-dark text-light text-center"
                                             style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
-                                                alt="...">
-                                            <div class="card-body d-grid gap-2">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text"></p>
-                                                <a href="#" class="btn btn-primary rounded">Ver mas...</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="card border border-0 bg-dark text-light text-center"
-                                            style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
@@ -214,7 +190,7 @@
                                     <div class="col-2 d-md-none">
                                         <div class="card border border-0 bg-dark text-light text-center"
                                             style="width: 13rem;">
-                                            <img src="../../resources/images/not found.jpg" class="card-img-top rounded"
+                                            <img src="../../resources/images/camisas.jpg" class="card-img-top rounded"
                                                 alt="...">
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
@@ -241,6 +217,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../controllers/public/nav-login.js"></script>
 
 </body>
