--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -139,7 +139,7 @@
                                 <td>Ariel123</td>
                                 <td>123</td>
                                 <td>Activo</td>
-                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"/><img src="../../resources/images/iconos/editar.png"></td>
+                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" / onclick="openDelete()"><img src="../../resources/images/iconos/editar.png" onclick="openUpdate()"></td>
                             </tr>
                         </tbody>
                     </table>                                
