--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -53,7 +53,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/productos.html">
                             <i><img src="https://img.icons8.com/material-sharp/42/null/package.png" /></i>
                             <span class="text nav-text">Productos</span>
                         </a>
