--- a/views/dashboard/principal.html
+++ b/views/dashboard/principal.html
@@ -104,6 +104,11 @@
     </nav>
 
     <section class="home">
+        <div class="text">
+            <br>
+            <h2>Menú
+                 Principal</h2>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-4">
                 <div class="chart-container">
