--- a/views/dashboard/productos.html
+++ b/views/dashboard/productos.html
@@ -28,7 +28,7 @@
             <div class="menu">
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="index.html">
+                        <a href="principal.html">
                             <i><img src="https://img.icons8.com/sf-black-filled/48/null/home.png" /></i>
                             <span class="text nav-text">Dashboard</span>
                         </a>
