--- a/views/dashboard/principal.html
+++ b/views/dashboard/principal.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="sidebar close"> 
+    <nav class="sidebar close">
         <header>
             <div class="image-text">
                 <span class="image">
@@ -103,25 +103,24 @@
 
     </nav>
 
-    <section class="home">
+    <div class="home">
         <div class="text">
             <br>
-            <h2>Menú
-                 Principal</h2>
+            <h2>Menú Principal</h2>
         </div>
         <div class="row d-flex justify-content-center">
-            <div class="col-4">
+            <div class="col-sm-12 col-md-4">
                 <div class="chart-container">
                     <canvas id="myChart"></canvas>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-sm-12 col-md-4">
                 <div class="chart-container2">
                     <canvas id="mychart"></canvas>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script>
