--- a/views/dashboard/login.html
+++ b/views/dashboard/login.html
@@ -7,17 +7,42 @@
     <title>Inicio de sesion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../resources/css/login.css">
 </head>
 
 <body>
-    <header>
-
-    </header>
-
     <main>
-        
+        <div class="position-relative">
+            <img class="position-absolute col-sm-2 col-md-2 col-lg-2 top-0 end-0"
+                src="../../resources/images/login1.png" alt="">
+        </div>
+        <br><br><br><br><br>
+        <div class="position-relative">
+            <img class="position-absolute col-sm-2 col-md-2 col-lg-2 start-0" src="../../resources/images/login2.png"
+                alt="">
+        </div>
+        <div class="form-signin">
+            <form>
+                <h1 class="h1 mb-3 fw-normal">Inicia sesión</h1>
+                <br>
+                <div class="form-floating">
+                  <input type="email" class="form-control" id="floatingInput" placeholder="Usuario">
+                  <label class="text-muted" for="floatingInput">Usuario</label>
+                </div>
+                <br>
+                <div class="form-floating">
+                  <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña">
+                  <label class="text-muted" for="floatingPassword">Contraseña</label>
+                </div>s
+                <br><br>
+                <button class="w-100 btn-lg col-6" type="submit">Entrar</button>
+                <p class="mt-5 mb-3 text-muted fecha">Administracion</p>
+              </form>
+        </div>
+        <div>
+            <img class="position-absolute bottom-0 end-0" src="../../resources/images/login3.png" alt="">
+        </div>
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
