--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -29,7 +29,7 @@
             <div class="menu">
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="../dashboard/principal.html|">
+                        <a href="../dashboard/principal.html">
                             <i><img src="https://img.icons8.com/sf-black-filled/48/null/home.png" /></i>
                             <span class="text nav-text">Dashboard</span>
                         </a>
