--- a/views/dashboard/login.html
+++ b/views/dashboard/login.html
@@ -35,7 +35,7 @@
                   <label class="text-muted" for="floatingPassword">Contraseña</label>
                 </div>s
                 <br><br>
-                <button class="w-100 btn-lg col-6" type="submit">Entrar</button>
+                <a href="principal.html"><button class="w-100 btn-lg col-6" type="submit"> Entrar</button></a>
                 <p class="mt-5 mb-3 text-muted fecha">Administracion</p>
               </form>
         </div>
