--- a/views/dashboard/login.html
+++ b/views/dashboard/login.html
@@ -33,9 +33,9 @@
                 <div class="form-floating">
                   <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña">
                   <label class="text-muted" for="floatingPassword">Contraseña</label>
-                </div>s
+                </div>
                 <br><br>
-                <a href="principal.html"><button class="w-100 btn-lg col-6" type="submit"> Entrar</button></a>
+                <button class="w-100 btn-lg col-6" type="submit"><a href="./principal.html">Entrar</a> </button>
                 <p class="mt-5 mb-3 text-muted fecha">Administracion</p>
               </form>
         </div>
