cambie el nombre del login a index

--- a/views/dashboard/principal.html
+++ b/views/dashboard/principal.html
@@ -79,7 +79,7 @@
 
             <div class="bottom-content">
                 <li class="">
-                    <a href="#">
+                    <a href="index.html">
                         <i><img
                                 src="https://img.icons8.com/external-tanah-basah-glyph-tanah-basah/48/null/external-exit-essentials-tanah-basah-glyph-tanah-basah.png" /></i>
                         <span class="text nav-text">Logout</span>
