--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -16,28 +16,34 @@
             <img class="position-absolute col-sm-2 col-md-2 col-lg-2 top-0 end-0"
                 src="../../resources/images/login1.png" alt="">
         </div>
-        <br><br><br><br><br>
+        <br><br>
         <div class="position-relative">
             <img class="position-absolute col-sm-2 col-md-2 col-lg-2 start-0" src="../../resources/images/login2.png"
                 alt="">
         </div>
         <div class="form-signin">
             <form>
+                <!-- Titulo del login -->
                 <h1 class="h1 mb-3 fw-normal">Inicia sesión</h1>
                 <br>
                 <div class="form-floating">
-                  <input type="email" class="form-control" id="floatingInput" placeholder="Usuario">
-                  <label class="text-muted" for="floatingInput">Usuario</label>
+                    <!-- Campo de usuario -->
+                    <input type="email" class="form-control" id="floatingInput" placeholder="Usuario">
+                    <label class="text-muted" for="floatingInput">Usuario</label>
                 </div>
                 <br>
                 <div class="form-floating">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña">
-                  <label class="text-muted" for="floatingPassword">Contraseña</label>
+                    <!-- Campo de contraseña -->
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña">
+                    <label class="text-muted" for="floatingPassword">Contraseña</label>
                 </div>
                 <br><br>
-                <button class="w-100 btn-lg col-6" type="submit"><a href="./principal.html">Entrar</a> </button>
+                <!-- Boton para entrar al sitio -->
+                <a href="../dashboard/principal.html">
+                <button class="w-100 btn-lg col-6" type="submit"><a href="../dashboard/principal.html">Entrar </button>
+                </a>
                 <p class="mt-5 mb-3 text-muted fecha">Administracion</p>
-              </form>
+            </form>
         </div>
         <div>
             <img class="position-absolute bottom-0 end-0" src="../../resources/images/login3.png" alt="">
