--- a/views/dashboard/productos.html
+++ b/views/dashboard/productos.html
@@ -23,7 +23,7 @@
             </div>
             <i class='bx bx-chevron-right toggle'></i>
         </header>
-
+        <!-- Menu de opciones de administracion -->
         <div class="menu-bar">
             <div class="menu">
                 <ul class="menu-links">
@@ -67,6 +67,7 @@
                 </ul>
             </div>
             <div class="bottom-content">
+                <!-- Boton para cerrar la sesion de administrador -->
                 <li class="">
                     <a href="#">
                         <i><img
@@ -74,6 +75,7 @@
                         <span class="text nav-text">Logout</span>
                     </a>
                 </li>
+                <!-- Modo oscuro -->
                 <li class="mode">
                     <div class="sun-moon">
                         <i class='bx bx-moon icon moon'></i>
@@ -93,6 +95,7 @@
                 <h2>Productos</h2>
             </div>
             <div class="row justify-content-md-center">
+                <!-- Buscador -->
                 <div class="col-md-5">
                     <form method="post" id="search-form">
                         <div class="input-field  flex-nowrap col-12">
@@ -150,6 +153,7 @@
             </div>
         </div>
     </section>
+    <!-- Script para el modo claro y el modo oscuro -->
     <script>
         const body = document.querySelector('body'),
             sidebar = body.querySelector('nav'),
