--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -119,34 +119,36 @@
                 </div>
             </div><br>
             <!-- tabla donde se mostraran los datos -->
-            <div class="row"id="tabla">                
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Nombre</th>
-                                <th>Apellido</th>
-                                <th>Correo</th>
-                                <th>Usuario</th>
-                                <th>Contraseña</th>
-                                <th>Estado</th>
-                                <th></th>                            
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>01</td>
-                                <td>Ariel Alessando</td>
-                                <td>Sandoval Moreno</td>
-                                <td>arielsandoval@gmail.com</td>
-                                <td>Ariel123</td>
-                                <td>123</td>
-                                <td>Activo</td>
-                                <!-- en las funciones onclick estan openUpdate y Delete que sirven para que las alertas de eliminar y actualizar salgan -->
-                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="openDelete()"><img src="../../resources/images/iconos/editar.png" onclick="openUpdate()"></td>
-                            </tr>
-                        </tbody>
-                    </table>                                
+            <div class="row" id="tabla">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Correo</th>
+                            <th>Usuario</th>
+                            <th>Contraseña</th>
+                            <th>Estado</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>01</td>
+                            <td>Ariel Alessando</td>
+                            <td>Sandoval Moreno</td>
+                            <td>arielsandoval@gmail.com</td>
+                            <td>Ariel123</td>
+                            <td>123</td>
+                            <td>Activo</td>
+                            <!-- en las funciones onclick estan openUpdate y Delete que sirven para que las alertas de eliminar y actualizar salgan -->
+                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
+                                    onclick="openDelete()"><img src="../../resources/images/iconos/editar.png"
+                                    onclick="openUpdate()"></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
