--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -40,7 +40,8 @@
                 <br><br>
                 <!-- Boton para entrar al sitio -->
                 <a href="../dashboard/principal.html">
-                <button class="w-100 btn-lg col-6" type="submit"><a href="../dashboard/principal.html">Entrar </button>
+                    <button class="w-100 btn-lg col-6" type="submit"><a href="../dashboard/principal.html">Entrar
+                    </button>
                 </a>
                 <p class="mt-5 mb-3 text-muted fecha">Administracion</p>
             </form>
