--- a/views/dashboard/pedidos.html
+++ b/views/dashboard/pedidos.html
@@ -115,39 +115,41 @@
                 <!--Botón de añadir que abre un modal para crear pedido-->
                 <div class="col-md-3">
                     <button class="border-0 " onclick="openCreate()"><img
-                        src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>
+                            src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>
                 </div>
                 <!--Botón para crear reportes-->
                 <div class="col-md-4">
                     Reportes
                     <button class="border-0"><img
-                        src="https://img.icons8.com/fluency-systems-filled/40/null/report-card.png" /></button>
+                            src="https://img.icons8.com/fluency-systems-filled/40/null/report-card.png" /></button>
                 </div>
             </div><br>
             <!--tabla de contenido-->
-            <div class="row"id="tabla">                
-                    <table>
-                        <!--Encabezado de la tabla-->
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Fecha del pedido</th>
-                                <th>Cliente</th>
-                                <th>Estado del pedido</th>                           
-                            </tr>
-                        </thead>
-                        <!--Contenido de la tabla-->
-                        <tbody>
-                            <tr>
-                                <td>01</td>
-                                <td>12/01/21</td>
-                                <td>Mario Guzmán</td>
-                                <td>Entregado</td>
-                                <!--Botones para actualizar y desactivar un pedido-->
-                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="eliminarpedido()"/><img src="../../resources/images/iconos/editar.png" onclick="editarpedido()"></td>
-                            </tr>
-                        </tbody>
-                    </table>                                
+            <div class="row" id="tabla">
+                <table>
+                    <!--Encabezado de la tabla-->
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Fecha del pedido</th>
+                            <th>Cliente</th>
+                            <th>Estado del pedido</th>
+                        </tr>
+                    </thead>
+                    <!--Contenido de la tabla-->
+                    <tbody>
+                        <tr>
+                            <td>01</td>
+                            <td>12/01/21</td>
+                            <td>Mario Guzmán</td>
+                            <td>Entregado</td>
+                            <!--Botones para actualizar y desactivar un pedido-->
+                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
+                                    onclick="eliminarpedido()" /><img src="../../resources/images/iconos/editar.png"
+                                    onclick="editarpedido()"></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
