--- a/views/dashboard/usuarios.html
+++ b/views/dashboard/usuarios.html
@@ -1,4 +1,5 @@
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,8 +7,9 @@
     <title>Usuarios</title>
     <link rel="stylesheet" href="../../resources/css/dashbard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <nav class="sidebar close">
         <header>
@@ -113,7 +115,7 @@
                 <!--Botón de añadir que abre un modal para crear usuario-->
                 <div class="col-md-3">
                     <button class="border-0 " onclick="openCreate()"><img
-                        src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png"/></button>
+                            src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>
                 </div>
                 <!--Botón que crea reportes-->
                 <div class="col-md-4">
@@ -123,34 +125,36 @@
                 </div>
             </div><br>
             <!--tabla de contenido-->
-            <div class="row"id="tabla">                
-                    <table>
-                        <!--Encabezado de la tabla-->
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Nombre</th>
-                                <th>Apellido</th>
-                                <th>Correo</th>
-                                <th>Usuario</th>
-                                <th>Estado</th>
-                                <th></th>                            
-                            </tr>
-                        </thead>
-                        <!--Contenido de la tabla-->
-                        <tbody>
-                            <tr>
-                                <td>01</td>
-                                <td>Cristian Alejandro</td>
-                                <td>Morales Granados</td>
-                                <td>alejandro@gmail.com</td>
-                                <td>Alejo321</td>
-                                <td>Activo</td>
-                                <!--Botones para actualizar y desactivar un usuario-->
-                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="openCreate3()"/><img src="../../resources/images/iconos/editar.png" onclick="editarusuario()"></td>
-                            </tr>
-                        </tbody>
-                    </table>                                
+            <div class="row" id="tabla">
+                <table>
+                    <!--Encabezado de la tabla-->
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Correo</th>
+                            <th>Usuario</th>
+                            <th>Estado</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <!--Contenido de la tabla-->
+                    <tbody>
+                        <tr>
+                            <td>01</td>
+                            <td>Cristian Alejandro</td>
+                            <td>Morales Granados</td>
+                            <td>alejandro@gmail.com</td>
+                            <td>Alejo321</td>
+                            <td>Activo</td>
+                            <!--Botones para actualizar y desactivar un usuario-->
+                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
+                                    onclick="openCreate3()" /><img src="../../resources/images/iconos/editar.png"
+                                    onclick="editarusuario()"></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
@@ -174,9 +178,10 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../controllers/dasboard/usuarios.js"></script>
 </body>
+
 </html>
