--- a/views/dashboard/productos.html
+++ b/views/dashboard/productos.html
@@ -69,7 +69,7 @@
             <div class="bottom-content">
                 <!-- Boton para cerrar la sesion de administrador -->
                 <li class="">
-                    <a href="#">
+                    <a href="index.html">
                         <i><img
                                 src="https://img.icons8.com/external-tanah-basah-glyph-tanah-basah/48/null/external-exit-essentials-tanah-basah-glyph-tanah-basah.png" /></i>
                         <span class="text nav-text">Logout</span>
