--- a/views/public/productos.html
+++ b/views/public/productos.html
@@ -107,7 +107,8 @@
                                             <div class="card-body d-grid gap-2">
                                                 <h5 class="card-title">Card title</h5>
                                                 <p class="card-text"></p>
-                                                <a href="../public/producto.html" class="btn btn-primary rounded">Ver mas...</a>
+                                                <a href="../public/producto.html" class="btn btn-primary rounded">Ver
+                                                    mas...</a>
                                             </div>
                                         </div>
                                     </div>
