--- a/views/dashboard/principal.html
+++ b/views/dashboard/principal.html
@@ -110,13 +110,13 @@
             <h2>Menú Principal</h2>
         </div>
         <!-- en este apartado esta la forma de como mandar a llamar las graficas -->
-        <div class="row d-flex justify-content-center">
-            <div class="col-sm-12 col-md-4">
+        <div id="charts" class="row d-flex justify-content-center">
+            <div class="col-4">
                 <div class="chart-container">
                     <canvas id="myChart"></canvas>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-4">
+            <div class="col-4">
                 <div class="chart-container2">
                     <canvas id="mychart"></canvas>
                 </div>
