--- a/views/dashboard/productos.html
+++ b/views/dashboard/productos.html
@@ -120,7 +120,7 @@
                 </div>
             </div><br>
             <!-- Tabla responsiva para los productos del area de administración (Jared) -->
-            <div class="row" style="max-height: 400px; margin-left: 8%; margin-right: 8%; text-align: center;">
+            <div class="row justify-content-center">
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
