--- a/views/dashboard/categorias.html
+++ b/views/dashboard/categorias.html
@@ -125,29 +125,22 @@
                 </div>
             </div><br>
             <!--tabla de contenido-->
-            <div class="row" id="tabla">
-                <table>
-                    <!--Encabezado de la tabla-->
+            <div>
+                <table class="table table-stripped table-bordered">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Categoria</th>
-                            <th>Tipo</th>
-                            <th>Estado</th>
-                            <th></th>
+                            <th scope="col">Id</th>
+                            <th scope="col">Categoria</th>
+                            <th scope="col">Tipo</th>
+                            <th scope="col">Estado</th>
                         </tr>
                     </thead>
-                    <!--Contenido de la tabla-->
                     <tbody>
                         <tr>
-                            <td>01</td>
-                            <td>Prendas</td>
-                            <td>Boxer personalizado</td>
-                            <td>Activo</td>
-                            <!--Botones para actualizar y desactivar un usuario-->
-                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
-                                    onclick="eliminarcategoria()" /><img src="../../resources/images/iconos/editar.png"
-                                    onclick="editarcategoria()"></td>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
                         </tr>
                     </tbody>
                 </table>
