--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -24,7 +24,7 @@
             </div>
             <i class='bx bx-chevron-right toggle'></i>
         </header>
-
+        <!-- Menu de opciones de administracion -->
         <div class="menu-bar">
             <div class="menu">
                 <ul class="menu-links">
