--- a/views/public/index.html
+++ b/views/public/index.html
@@ -61,7 +61,7 @@
                     <a href="#">Contactos</a>
                     <button class="btnLogin-popup">Login</button>
                 </nav>
-
+                <!-- Formulario de inicio de seción -->
                 <div class="wrapper">
                     <span class="icon-close" id="btn-close-login">
                         <ion-icon name="close"></ion-icon>
@@ -89,42 +89,10 @@
                             </div>
                         </form>
                     </div>
-
-                    <div class="form-box registrate">
-                        <h2>Registarte</h2>
-                        <form action="#">
-                            <div class="imput-box">
-                                <span class="icon"><ion-icon name="person"></ion-icon></span>
-                                <input type="name" required>
-                                <label for="">Nombre</label>
-                            </div>
-                            <div class="imput-box">
-                                <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                                <input type="email" required>
-                                <label for="">Email</label>
-                            </div>
-                            <div class="imput-box">
-                                <span class="icon"><ion-icon name="card-outline"></ion-icon></span>
-                                <input type="text" required>
-                                <label for="">DUI</label>
-                            </div>
-                            <div class="imput-box">
-                                <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                                <input type="password" required>
-                                <label for="">Contraseña</label>
-                            </div>
-                            <div class="remember-forgot">
-                                <label for=""><input type="checkbox"> Accepto los terminos y condiciones</label>
-                            </div>
-                            <button type="submit" class="btn">Registrarme</button>
-                            <div class="login-register">
-                                <p>¿Ya tienes una cuenta? <a href="#" class="login-link">Login</a></p>
-                            </div>
-                        </form>
-                    </div>
                 </div>
             </header>
         </div>
+        <!-- Carrusel -->
         <div class="row">
             <main>
                 <div class="carousel-principal">
@@ -200,7 +168,7 @@
         </div>
     </div>
     <div class="row">
-        <!-- footer -->
+        <!-- Pie de pagina -->
         <footer class="bg-primary d-flex justify-content-around flex-column"></footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
