--- a/views/public/producto.html
+++ b/views/public/producto.html
@@ -59,6 +59,7 @@
         <div class="row">
             <p class="fs-3 fw-bold text-light">Camisas</p>
         </div>
+        <!-- Carrusel -->
         <div class="row">
             <div class="col">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -89,6 +90,7 @@
                 <div class="row">
                     <p class="fs-4 text-light">Precio: $25</p>
                 </div>
+                <!-- Botón para agregar al acrrito -->
                 <div class="row">
                     <div class="d-grid gap-2 col-8 mx-auto align-self-start">
                         <button class="btn btn-primary" type="button" onclick="Pedido()">Añadir al carrito</button>
@@ -114,6 +116,7 @@
                 </div>
             </div>
         </div>
+        <!-- Comentarios -->
         <div class="row">
             <p class="fs-3 mt-3 text-light">Comentarios</p>
             <div class="row">
