--- a/views/dashboard/principal.html
+++ b/views/dashboard/principal.html
@@ -27,7 +27,7 @@
 
             <i class='bx bx-chevron-right toggle'></i>
         </header>
-
+        <!-- Menu de opciones de administracion -->
         <div class="menu-bar">
             <div class="menu">
 
